# Task_Manager_Tool

./: CMakeLists.txt  CMakePresets.json  README.md
example/: CMakeLists.txt  helloworld.cpp  test_admin.cpp  test_task.cpp  test_taskmanager.cpp  test_user.cpp
examples/: helloworld.cpp  test_admin.cpp  test_task.cpp
include/: admin.h  inputvalidator.h  printhello.h  task.h  taskmanager.h  user.h
include/task/: task.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  admin.cpp  inputvalidator.cpp  printhello.cpp  task.cpp  taskmanager.cpp  user.cpp
